# CMakeTutorial

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt  main.cpp
config/: config.h.in
src/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
